fix date range separator alignment

--- a/packages/framework/esm-styleguide/src/datepicker/datepicker.module.scss
+++ b/packages/framework/esm-styleguide/src/datepicker/datepicker.module.scss
@@ -158,6 +158,8 @@
 }
 
 .separator {
+  display: flex;
+  align-items: center;
   margin-inline: 0.5rem;
 }
 
